src/_app.mobile.scss
$navbar-height: 78px;

.navbar {
    height: auto;
    padding-top: 1vh;
    padding-bottom: 0.5rem;
    align-items: flex-end;
    flex-wrap: wrap;

    .navbar-main {
        flex: 1;
    }

    .navbar-main,
    .navbar-search {
        margin-bottom: 0.5rem;
    }

    .navbar-search {
        width: 100%;
        order: 1; // re-order to the end, a new line
    }

    .nav-item {
        padding: 0 0.5rem;
    }

    .nav-item,
    .navbar-logo {
        font-size: 1.6rem;

        img {
            width: 28px;
            margin-left: 0.25rem;
        }
    }
}

.search-box {
    width: 100% !important;
    label {
        width: 100%;
    }
}

.top-head {
    position: absolute;
    top: $navbar-height;
    width: 100%;

    .page-title > span {
        background: rgba(255,255,255,0.65);
        border-radius: 24px;
        padding: 0 6px;
    }
}

.navbar + #router-view {
    padding-top: $navbar-height;
}

.top-head + #router-view {
    padding-top: $navbar-height + 80px;
}

@media(max-width: 700px) {
    span.router-title {
        display: none;
    }
}
@media(max-width: 360px) {
    div.navbar-controls {
        display: none;
    }
}

@media(max-width: 700px) {
    #footer .footer-area button {
        display: none;
    }
}

.navbar .loader {  //does not work. why?
    position: absolute;
    top: 200px;
    left: 200px;
    font-size:5em;
}

.search-box-input {
    font-size: 100%;
    height: 2em;
}

.detail-header {
    margin-top: 26px;
    min-height: 60px;
    h3 {
        padding: 0 8px;
    }
}

div.page-container {
    background-color: antiquewhite;
}

div.container {
    padding-right: 0;
    padding-left: 0;
}

